--- a/index.html
+++ b/index.html
@@ -1,66 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/style.css"/>
-    <title>Shapes</title>
-  </head>
-  <body>
-
-
-
-    <!-- Page Layout here -->
-    <div class="row">
-
-      <div class="col s12 m4 l3">
-        <!-- Rectangle -->
-        <h3>Rectangle</h3><br>
-        <label>Width:  <input class="browser-default" type="text" name="width" placeholder="Enter width"></label><br>
-        <label>Height: <input class="browser-default" type="text" name="height" placeholder="Enter height"></label><br>
-        <button type="submit">Create Rectangle</button>
-
-        <!-- Square -->
-        <h3>Square</h3><br>
-        <label>Width:  <input class="browser-default" type="text" name="width" placeholder="Enter width"></label><br>
-        <label>Height: <input class="browser-default" type="text" name="height" placeholder="Enter height"></label><br>
-        <button type="submit">Create Square</button>
-
-        <!-- Circle -->
-        <h3>Circle</h3><br>
-        <label>Width:  <input class="browser-default" type="text" name="width" placeholder="Enter width"></label><br>
-        <label>Height: <input class="browser-default" type="text" name="height" placeholder="Enter height"></label><br>
-        <button type="submit">Create Circle</button>
-
-        <!-- Isoceles Right Triangle -->
-        <h3>Triangle</h3><br>
-        <label>Width:  <input class="browser-default" type="text" name="width" placeholder="Enter width"></label><br>
-        <label>Height: <input class="browser-default" type="text" name="height" placeholder="Enter height"></label><br>
-        <button type="submit">Create Triangle</button>
-
-
-
-      </div><!-- Sidepanel -->
-
-      <div class="col s12 m8 l9 blue lighten-5">
-
-      </div><!-- Main content -->
-
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <div id="inputs-container">
+        <label for="">Height</label>
+        <input id="rect-height" type="text">
+        <label for="">Width</label>
+        <input id="rect-width" type="text">
+        <button onclick="generateShape('rectangle')">Rectangle</button>
+        <label for="">Side</label>
+        <input id="square-side" type="text">
+        <button onclick="generateShape('square')">Square</button>
+        <label for="">Radius</label>
+        <input id="circle-radius" type="text">
+        <button onclick="generateShape('circle')">Circle</button>
+        <label for="">Height</label>
+        <input id="tri-height" type="text">
+        <button onclick="generateShape('triangle')">Triangle</button>
     </div>
+    <div id="shapes-container"></div>
+    <div id="info-container"></div>
 
-
-
-    <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <!-- Custom Scripts -->
-    <script src="javascript.js"></script>
-  </body>
+    <script src="typescript.js"></script>
+</body>
 </html>
