--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class='pg-wrapper'>
         <div class='containr'>
             <div id=leftBar>
-            <h3>Shape Measurement(s)</h3>
+            <h3>Shape(s)</h3>
                 <div class='control'>
                     <label for="rectangle">Rectangle: </label>
                     <input type="number" id="rectangleW" placeholder="Width">
@@ -37,11 +37,11 @@
                     <label for="triangle">Triangle: </label>
                     <input type="number" id="triangle" placeholder="height">
                     <button id='tri'>Add Shape</button>
-                    <script src="script.js"></script>
                 </div>
                 <hr>
                 <br>
-                <h3>Shape Properties: </h3>
+
+                <!-- <h3>Shape Properties: </h3>
                 <div class='control'>
                     <h4>Shape Name: <span id="name"></span></h4>
                 </div>
@@ -59,10 +59,11 @@
                 </div>
                 <div class='control'>
                     <h4>Perimeter: <span id="peri"></span></h4>
-                </div>
+                </div> -->
+
             </div>
-            <div id="pad">
-            </div>
+            <div id="pad"></div>
+            <div id="info-container"></div>
         </div>
     </div>
 
